--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.profiles.active=dev
+#spring.profiles.active=aliyuntest
+#spring.profiles.active=aliyunprod
+#spring.profiles.active=awstest
