Change-Id: I73e6e42203999ebd9ae731e36dff87235a76a142

--- a/src/main/resources/config/application-processlayer.properties
+++ b/src/main/resources/config/application-processlayer.properties
@@ -1,40 +1,23 @@
-account.saving.insert=http://ACCOUNT-SERVICE/account/saving/insert
-account.saving.findOne=http://ACCOUNT-SERVICE/account/saving/findOne
+account.saving.withdrawal=http://ACCOUNT-SERVICE/account/saving/update
 account.saving.update=http://ACCOUNT-SERVICE/account/saving/update
+account.saving.findOne=http://ACCOUNT-SERVICE/account/saving/findOne
 
+account.current.withdrawal=http://ACCOUNT-SERVICE/account/current/update
+account.current.findOne=http://ACCOUNT-SERVICE/account/current/findOne
 account.current.update=http://ACCOUNT-SERVICE/account/current/update
-account.fex.insert=http://ACCOUNT-SERVICE/account/fex/insert
-account.fex.find=http://ACCOUNT-SERVICE/account/fex/findOne
-account.fex.update=http://ACCOUNT-SERVICE/account/fex/update
+
+termdeposit.master.findone=http://ACCOUNT-SERVICE/account/termdeposit/findOne
+termdeposit.master.findMany=http://ACCOUNT-SERVICE/account/termdeposit/findMany
+
+termdeposit.detail.insert=http://ACCOUNT-SERVICE/account/termdepositdetail/insert
+termdeposit.detail.findOne=http://ACCOUNT-SERVICE/account/termdepositdetail/findOne
+termdeposit.detail.findMany=http://ACCOUNT-SERVICE/account/termdepositdetail/findMany
+termdeposit.detail.update=http://ACCOUNT-SERVICE/account/termdepositdetail/update
+
+deposit.range.findMax=http://ACCOUNT-SERVICE/account/fexdetail/findMany
+deposit.range.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findMany
+deposit.rate.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findMany
 
 transaction.log.insert=http://TRANSACTION-SERVICE/transaction/log/insert
-
-account.saving.findOne=http://ACCOUNT-SERVICE/account/saving/findOne
-account.saving.closeaccount=http://ACCOUNT-SERVICE/account/saving/closeAccount
-
-
-account.current.closeaccount=http://ACCOUNT-SERVICE/account/current/closeAccount
-
-account.fex.findone=http://ACCOUNT-SERVICE/account/fex/findOne
-account.fex.closeaccount=http://ACCOUNT-SERVICE/account/fex/closeAccount
-
-accountdetail.fex.findone=http://ACCOUNT-SERVICE/account/fexdetail/findOne
-accountdetail.fex.findvalidbalance=http://ACCOUNT-SERVICE/account/fexdetail/findBalanceBigZero
-
-
-account.customer.findone=http://CUSTOMER-SERVICE/customer/findOne
-account.customer.findoneaccount=http://CUSTOMER-SERVICE/customer/findOneAccount
-account.customer.findallaccount=http://CUSTOMER-SERVICE/customer/findAllAccount
-account.customer.existaccnumber=http://CUSTOMER-SERVICE/customer/accountNumberExists
-account.customer.associatedAccounts=http://CUSTOMER-SERVICE/customer/associatedAccounts
-
-account.current.find=http://ACCOUNT-SERVICE/account/current/findOne
-termdeposit.master.findone=http://ACCOUNT-SERVICE/account/fexdetail/findOne
-termdeposit.master.findMany=http://ACCOUNT-SERVICE/account/fexdetail/findMany
-termdeposit.detail.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findOne
-termdeposit.detail.findMany=http://ACCOUNT-SERVICE/account/fexdetail/findMany
-
-termdeposit.master.closeaccount=http://ACCOUNT-SERVICE/account/fexdetail/closeAccount
-
-precious.master.findone=http://ACCOUNT-SERVICE/account/precious/findOne
-precious.master.closeaccount=http://ACCOUNT-SERVICE/account/precious/closeAccount
+transaction.log.update=http://TRANSACTION-SERVICE/transaction/log/update
+transaction.log.findOne=http://TRANSACTION-SERVICE/transaction/log/findOne
