Change-Id: I65a047ac55419bb774eff1c6733e4f74e8017168

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.simnectzbank.lbs.processlayer</groupId>
-	<artifactId>termdeposit-process</artifactId>
+	<artifactId>term-deposit-process</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>termdeposit-process</name>
+	<name>term-deposit-process</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
