--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,64 @@
-spring.profiles.active=dev,processlayer
-#spring.profiles.active=aliyuntest
-#spring.profiles.active=aliyunprod
-#spring.profiles.active=awstest
+management.endpoints.web.exposure.include=*
+
+spring.messages.basename=il8n/messages/messages
+spring.messages.cache-second = 3600
+spring.messages.encoding = UTF-8
+
+
+#============== kafka ===================
+kafka.consumer.zookeeper.connect=localhost:2181
+kafka.consumer.servers=localhost:8096
+kafka.consumer.enable.auto.commit=true
+kafka.consumer.session.timeout=6000
+kafka.consumer.auto.commit.interval=100
+kafka.consumer.auto.offset.reset=latest
+kafka.consumer.topic=test
+kafka.consumer.group.id=devin
+kafka.consumer.concurrency=10
+
+kafka.producer.servers=localhost:8096
+kafka.producer.retries=0
+kafka.producer.batch.size=4096
+kafka.producer.linger=1
+kafka.producer.buffer.memory=40960
+
+spring.application.name=term-deposit-process
+server.port=8116
+server.session.timeout=10
+server.tomcat.uri-encoding=UTF-8
+
+gateway.url=localhost:8086/term-deposit-process
+eureka.client.service-url.defaultZone=http://localhost:8089/eureka
+
+springfox.documentation.swagger.v2.path = /swagger.json
+mybatis.mapper-locations=classpath:config/mybatisconfig/**/*.xml
+logging.level.com.csi.sbs.deposit.business.dao=debug
+
+account.saving.withdrawal=http://ACCOUNT-SERVICE/account/saving/update
+account.saving.update=http://ACCOUNT-SERVICE/account/saving/update
+account.saving.findOne=http://ACCOUNT-SERVICE/account/saving/findOne
+
+account.current.withdrawal=http://ACCOUNT-SERVICE/account/current/update
+account.current.findOne=http://ACCOUNT-SERVICE/account/current/findOne
+account.current.update=http://ACCOUNT-SERVICE/account/current/update
+
+termdeposit.master.findone=http://ACCOUNT-SERVICE/account/termdeposit/findOne
+termdeposit.master.findMany=http://ACCOUNT-SERVICE/account/termdeposit/findMany
+
+termdeposit.detail.insert=http://ACCOUNT-SERVICE/account/termdepositdetail/insert
+termdeposit.detail.findOne=http://ACCOUNT-SERVICE/account/termdepositdetail/findOne
+termdeposit.detail.findMany=http://ACCOUNT-SERVICE/account/termdepositdetail/findMany
+termdeposit.detail.update=http://ACCOUNT-SERVICE/account/termdepositdetail/update
+
+deposit.range.findMax=http://ACCOUNT-SERVICE/account/fexdetail/findMany
+deposit.range.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findMany
+deposit.rate.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findMany
+
+transaction.log.insert=http://TRANSACTION-SERVICE/transaction/log/insert
+transaction.log.update=http://TRANSACTION-SERVICE/transaction/log/update
+transaction.log.findOne=http://TRANSACTION-SERVICE/transaction/log/findOne
+
+sysadmin.sysconfig.findOne=http://SYSADMIN-SERVICE/sysconfig/findOne
+sysadmin.sysconfig.update=http://SYSADMIN-SERVICE/sysconfig/updateNextAvailableCustomerNum
+
+sysadmin.holiday.findOne=http://SYSADMIN-SERVICE/holiday/findOne
