--- a/src/main/resources/config/application-processlayer.properties
+++ b/src/main/resources/config/application-processlayer.properties
@@ -15,9 +15,14 @@ termdeposit.detail.findMany=http://ACCOUNT-SERVICE/account/termdepositdetail/fin
 termdeposit.detail.update=http://ACCOUNT-SERVICE/account/termdepositdetail/update
 
 deposit.range.findMax=http://ACCOUNT-SERVICE/account/fexdetail/findMany
-deposit.range.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findMany
-deposit.rate.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findMany
+deposit.range.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findOne
+deposit.rate.findOne=http://ACCOUNT-SERVICE/account/fexdetail/findOne
 
 transaction.log.insert=http://TRANSACTION-SERVICE/transaction/log/insert
 transaction.log.update=http://TRANSACTION-SERVICE/transaction/log/update
 transaction.log.findOne=http://TRANSACTION-SERVICE/transaction/log/findOne
+
+sysadmin.sysconfig.findOne=http://SYSADMIN-SERVICE/sysconfig/findOne
+sysadmin.sysconfig.update=http://SYSADMIN-SERVICE/sysconfig/updateNextAvailableCustomerNum
+
+sysadmin.holiday.findOne=http://SYSADMIN-SERVICE/holiday/findOne
