--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -15,22 +15,12 @@ kafka.producer.batch.size=4096
 kafka.producer.linger=1
 kafka.producer.buffer.memory=40960
 
-spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/deposit?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
-
-spring.datasource.username=root
-spring.datasource.password=853234#@$!Devin
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
-spring.application.name=deposit
-
+spring.application.name=term-deposit-process
 server.port=8116
 server.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
 
-gateway.url=localhost:8086/deposit
+gateway.url=localhost:8086/term-deposit-process
 eureka.client.service-url.defaultZone=http://localhost:8089/eureka
 
 springfox.documentation.swagger.v2.path = /swagger.json
