Change-Id: Id3a717e20ccef2fe3aa04fd063a6a5468fa68af3

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.cloud.config.uri=http://127.0.0.1:8118/
-spring.cloud.config.profile=dev,processlayer
+spring.cloud.config.profile=dev,processlayer,comdev
 spring.cloud.config.label=master
-spring.cloud.config.name=termdepositprocess
+spring.cloud.config.name=termdepositprocess,common,tx
