--- a/src/main/resources/config/application-aliyunprod.properties
+++ b/src/main/resources/config/application-aliyunprod.properties
@@ -1,15 +1,5 @@
-
-spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-wz9b160bmg1mk8f99qo.mysql.rds.aliyuncs.com:3306/deposit?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
-spring.datasource.username=lbsdba
-spring.datasource.password=Simnectz2019
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5s
-spring.application.name=deposit
-
-server.port=8084
+spring.application.name=term-deposit-process
+server.port=8116
 server.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
 
